--- a/archive_manager.ipynb
+++ b/archive_manager.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fa6826e8",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Utworzono folder: Model_Archive\\2025-05-21_14-06-49\n",
-      "Skopiowano: asl_recognition_model.h5 -> Model_Archive\\2025-05-21_14-06-49\\asl_recognition_model.h5\n",
-      "Skopiowano: best_asl_model.h5 -> Model_Archive\\2025-05-21_14-06-49\\best_asl_model.h5\n",
-      "Skopiowano: augmented_samples.png -> Model_Archive\\2025-05-21_14-06-49\\augmented_samples.png\n",
-      "Skopiowano: confusion_matrix.png -> Model_Archive\\2025-05-21_14-06-49\\confusion_matrix.png\n",
-      "Skopiowano: prediction_samples.png -> Model_Archive\\2025-05-21_14-06-49\\prediction_samples.png\n",
-      "Skopiowano: training_history.png -> Model_Archive\\2025-05-21_14-06-49\\training_history.png\n",
-      "Zakończono kopiowanie. Skopiowano 6 plików.\n"
+      "Utworzono folder: Model_Archive\\2025-12-09_14-42-18\n",
+      "Skopiowano: asl_model_128.h5 -> Model_Archive\\2025-12-09_14-42-18\\asl_model_128.h5\n",
+      "Skopiowano: best_asl_model_128.h5 -> Model_Archive\\2025-12-09_14-42-18\\best_asl_model_128.h5\n",
+      "Skopiowano: Training_Logs\\augmented_samples.png -> Model_Archive\\2025-12-09_14-42-18\\augmented_samples.png\n",
+      "Skopiowano: Training_Logs\\confusion_matrix.png -> Model_Archive\\2025-12-09_14-42-18\\confusion_matrix.png\n",
+      "Skopiowano: Training_Logs\\prediction_samples.png -> Model_Archive\\2025-12-09_14-42-18\\prediction_samples.png\n",
+      "Skopiowano: Training_Logs\\training_history.png -> Model_Archive\\2025-12-09_14-42-18\\training_history.png\n",
+      "Skopiowano: Training_Logs\\classification_report.txt -> Model_Archive\\2025-12-09_14-42-18\\classification_report.txt\n",
+      "Skopiowano: Training_Logs\\class_map.txt -> Model_Archive\\2025-12-09_14-42-18\\class_map.txt\n",
+      "Zakończono kopiowanie. Skopiowano 8 plików.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Model_Archive\\\\2025-05-21_14-06-49'"
+       "'Model_Archive\\\\2025-12-09_14-42-18'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,18 +54,27 @@
     "    \n",
     "    # Znajdź wszystkie pliki .h5 i .png w bieżącym folderze\n",
     "    h5_files = glob.glob(\"*.h5\")\n",
-    "    png_files = glob.glob(\"*.png\")\n",
+    "    # Znajdź pliki .png i .txt w katalogu Training_Logs\n",
+    "    training_logs_png = glob.glob(os.path.join(\"Training_Logs\", \"*.png\"))\n",
+    "    training_logs_txt = glob.glob(os.path.join(\"Training_Logs\", \"*.txt\"))\n",
     "    \n",
     "    # Połącz listy plików\n",
-    "    files_to_copy = h5_files + png_files\n",
+    "    files_to_copy = h5_files + training_logs_png + training_logs_txt\n",
     "    \n",
     "    # Skopiuj pliki do folderu docelowego\n",
     "    copied_files = 0\n",
-    "    for file in files_to_copy:\n",
-    "        destination_path = os.path.join(destination_folder, file)\n",
-    "        shutil.copy2(file, destination_path)\n",
-    "        print(f\"Skopiowano: {file} -> {destination_path}\")\n",
-    "        copied_files += 1\n",
+    "    for source_path in files_to_copy:\n",
+    "        # Pobierz samą nazwę pliku (np. zamień 'Training_Logs/wykres.png' na 'wykres.png')\n",
+    "        # Dzięki temu pliki trafią bezpośrednio do folderu archiwum, a nie do podfolderu\n",
+    "        file_name = os.path.basename(source_path)\n",
+    "        destination_path = os.path.join(destination_folder, file_name)\n",
+    "        \n",
+    "        try:\n",
+    "            shutil.copy2(source_path, destination_path)\n",
+    "            print(f\"Skopiowano: {source_path} -> {destination_path}\")\n",
+    "            copied_files += 1\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Błąd: Nie znaleziono pliku {source_path}\")\n",
     "    \n",
     "    print(f\"Zakończono kopiowanie. Skopiowano {copied_files} plików.\")\n",
     "    return destination_folder\n",
